--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,8 @@
-by linyu deng, at 2014/11/9
+by linyu deng, at 2014/11/09
 
 * set the sumbiting authorization for post
 
-by linyu deng, at 2014/11/9
+by linyu deng, at 2014/11/09
 
-initialize this file, start with the * that option had not been done, cuurently.
+- mark down what are you want to do with * at the start of item of list
+- change the * to - if it has been finished
