changes 001 is done

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,6 @@
 by linyu deng, at 2014/11/09
 
-* set the sumbiting authorization for post
+- 001 set the sumbiting authorization for post
 
 by linyu deng, at 2014/11/09
 
