tweak the authorization of user

--- a/CHANGES
+++ b/CHANGES
@@ -4,5 +4,5 @@ by linyu deng, at 2014/11/09
 
 by linyu deng, at 2014/11/09
 
-- mark down what are you want to do with * at the start of item of list
-- change the * to - if it has been finished
+- mark down what are you want to do with * at the front each line
+- remove the * if that task had been done
