--- a/CHANGES
+++ b/CHANGES
@@ -5,11 +5,13 @@ by linyu deng, at Nov, 2014
 - variablify the constant in templates 12
 - reset the user auth of routes, adjust the level that allows user make a submitting for post and comment 13
 
-by linyu deng, at Oct, 2014
 
-- initialize this file by author and date, and the month moves backward for one, like Nov -> Oct
-- mark down what are you want to do, and sign an asterisk at the end of each line or on the top of list block
-- remove the asterisk if these tasks have been done
-- the number at the end of each line is the day as task ID, and commit by like that C1411 10, C1411 10-12
-  C1411 10 		- the task at Nov, 2014, id 10
-  c1411 10-12 	- the task at Nov, 2014, id from 10 to 12
+by <author/maintainer>, at <month>, <year>
+
+- initialize this file
+- mark down the main tasks you intend to do
+- append a day numeric if that task had been done
+- about the task id in commit like C141112, c141113 14, c141115-18
+  C141112 		- the task at day 12 in Nov, 2014
+  c141113 14 	- the tasks at days 13 and 14 in Nov, 2014
+  c141115-18	- the tasks at days from 15 to 18 in Nov, 2014
